hphp/hack/test/typecheck/inout/bad_inout_use_call1.php.exp
File "bad_inout_use_call1.php", line 9, characters 8-15:
Invalid argument (Typing[4110])
File "bad_inout_use_call1.php", line 3, characters 21-23:
Expected int
File "bad_inout_use_call1.php", line 8, characters 8-13:
But got string
