hphp/hack/test/typecheck/inout/bad_inout_use_call1.php
<?hh // strict

function herp(inout int $x): void {
  $x += 42;
}

function derp(): void {
  $z = 'derp';
  herp(inout $z);
}
